COMPASS-1687: Fix element z-indexes

--- a/packages/compass-crud/styles/editable-element-field.less
+++ b/packages/compass-crud/styles/editable-element-field.less
@@ -3,7 +3,7 @@
   border: none;
   padding-left: 1px;
   -webkit-user-select: text;
-  max-width: 15vw; 
+  max-width: 15vw;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -11,7 +11,7 @@
   &-is-editing {
     border: 1px solid #807f7f;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
-    z-index: 10;
+    z-index: 200;
     margin-top: -1px;
     margin-bottom: -1px;
   }
