--- a/packages/compass-crud/styles/editable-element-value.less
+++ b/packages/compass-crud/styles/editable-element-value.less
@@ -57,7 +57,7 @@
   &-is-editing {
     border: 1px solid #807f7f;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
-    z-index: 10;
+    z-index: 200;
     margin-top: -1px;
     margin-bottom: -1px;
   }
@@ -69,7 +69,6 @@
 
   &-wrapper {
     flex-grow: 3;
-    z-index: 100;
 
     &-is-string {
       color: steelblue;
