--- a/packages/compass-crud/styles/element.less
+++ b/packages/compass-crud/styles/element.less
@@ -22,6 +22,8 @@
     vertical-align: top;
     -webkit-user-select: text;
     flex-grow: 3;
+    z-index: 50;
+    position: relative;
 
     &-is-string {
       color: steelblue;
